# faq_service

./: README.md
src/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2025_08_28_1516-b089848a529c_create_table_questions.py  2025_08_29_1809-b5863ed61b9e_create_table_answer.py
src/api/: __init__.py
src/api/v1/: __init__.py  answer.py  question.py
src/core/: __init__.py  db_helper.py  excpetions.py  lifespan.py  middleware.py  settings.py
src/core/models/: __init__.py  base.py  question.py
src/core/schemas/: __init__.py  answer.py  question.py
src/core/services/: __init__.py  answer.py  question.py
src/repositories/: __init__.py  answer.py  question.py
src/tests/: test_answer_service.py  test_question_service.py
